--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>GTA ONLINE</title>
     <link rel="stylesheet" href="beautifulsite.css">
-    <link rel="icon" type="image/x-icon" href="http://www.rw-designer.com/icon-view/21515.png">
+    <link rel="icon" type="image/x-icon" href="21515.png">
 </head>
 
 <body>
