--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@
 <body>
 <h1>Welcome to my webpage!</h1>
 <p>Hi! Here is website about GTA Online</p>
-<h2>My favourite things:</h2>
-<ul>
-    <li>GTA Online</li>
-    <li>Music</li>
-    <li>Programming</li>
-</ul>
+<h2>GTA Online</h2>
 <p>Check out more about GTA Online here: <a href="https://www.rockstargames.com/gta-online?_gl=1*1cnzzn7*_gcl_au*NDM4NDkzNzEzLjE3NDE2MDIwOTA.*_ga*MTA2MTk4ODAzMC4xNzQxNjAyMDk0*_ga_PJQ2JYZDQC*MTc0MTY4ODQzOC4zLjEuMTc0MTY4ODQ1MC4wLjAuMA..">Click on it!</a></p>
 <img src="https://m.media-amazon.com/images/M/MV5BN2MxZTg0ZjYtYWRhMC00MTZlLTg0Y2QtYjhjZDdiNTk2MWQxXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="Here is the poster" width="460" height="650">
 <h2> My favourite GTA Online Heists:</h2>
