--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <p style="width: 300px">The Diamond Casino Heist is one of the coolest and most varied heists in GTA Online. <br> It was released in December 2019 and allows you to rob the Diamond Casino & Resort, where you can steal cash, gold, jewelry, or art.</p>
     <img src="https://oyster.ignimgs.com/mediawiki/apis.ign.com/grand-theft-auto-5/c/cc/GTA_Online_12_5_2019_The_Diamond_Casino_Heist.jpg" alt="The Diamond Casino Heist" width="800" height="450">
 </ol>
+<img src="MyFavourite.png" alt="MyFavouriteGtaOnlineWeapon" width="500" height="500">
 <script src="scriptforgtaonlinewebsite.js"></script>
 </body>
 </html>
