Another bug fix

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <img src="https://oyster.ignimgs.com/mediawiki/apis.ign.com/grand-theft-auto-5/c/cc/GTA_Online_12_5_2019_The_Diamond_Casino_Heist.jpg" alt="The Diamond Casino Heist" width="800" height="450">
 </ol>
 <img src="MyFavourite.png" alt="MyFavouriteGtaOnlineWeapon" width="1300" height="400">
+<p style="width: 300px">Homepage <a href="index1.html">Click</p>
 <script src="scriptforgtaonlinewebsite.js"></script>
 </body>
 </html>
