--- a/index1.html
+++ b/index1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>My Favourite things</title>
+    <link rel="icon" type="image/x-icon" href="hearticon.png">
 </head>
 <body>
 <h1 align="center">My favourite page</h1>
